--- a/Shophoto/Shophoto/Shophoto.csproj
+++ b/Shophoto/Shophoto/Shophoto.csproj
@@ -83,6 +83,10 @@
       <DependentUpon>InputBox.xaml</DependentUpon>
     </Compile>
     <Compile Include="InputBox\SearchBoxVM.cs" />
+    <Compile Include="Menus\SortDropdownMenu.xaml.cs">
+      <DependentUpon>SortDropdownMenu.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Menus\SortDropdownMenuVM.cs" />
     <Compile Include="Ninject\IocConfiguration.cs" />
     <Compile Include="Ninject\IocKernel.cs" />
     <Compile Include="MainWindowVM.cs" />
@@ -101,10 +105,10 @@
       <DependentUpon>MainView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\MainViewVM.cs" />
-    <Compile Include="Views\Menus\SideMenu.xaml.cs">
+    <Compile Include="Menus\SideMenu.xaml.cs">
       <DependentUpon>SideMenu.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\Menus\SideMenuVM.cs" />
+    <Compile Include="Menus\SideMenuVM.cs" />
     <Page Include="Buttons\FABPlusButton.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -137,6 +141,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Menus\SortDropdownMenu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\Collections\Collections.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -149,7 +157,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Menus\SideMenu.xaml">
+    <Page Include="Menus\SideMenu.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
