Add and delete FAB has been added in the project. Basic template for create project page added

--- a/Shophoto/Shophoto/Shophoto.csproj
+++ b/Shophoto/Shophoto/Shophoto.csproj
@@ -69,9 +69,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Buttons\CollectionsFABButtonVM.cs" />
     <Compile Include="Buttons\IconButton.xaml.cs">
       <DependentUpon>IconButton.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Buttons\ProjectsFABButtonVM.cs" />
     <Compile Include="Command\CommandHandler.cs" />
     <Compile Include="Buttons\FABPlusButtonVM.cs" />
     <Compile Include="Image\Thumbnail\ImageThumbnailCollectionsVM.cs" />
@@ -126,6 +128,10 @@
       <DependentUpon>SideMenu.xaml</DependentUpon>
     </Compile>
     <Compile Include="Menus\SideMenuVM.cs" />
+    <Compile Include="Views\Projects\AuxView\CreateProject.xaml.cs">
+      <DependentUpon>CreateProject.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Projects\AuxView\CreateProjectVM.cs" />
     <Compile Include="Views\Projects\Folder\ProjectFolder.xaml.cs">
       <DependentUpon>ProjectFolder.xaml</DependentUpon>
     </Compile>
@@ -195,6 +201,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Menus\SideMenu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Projects\AuxView\CreateProject.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
